[gd_scene load_steps=8 format=3 uid="uid://cr2kyb5p02t12"]

[ext_resource type="Texture2D" uid="uid://b888iplht5f73" path="res://icon.svg" id="1_47hed"]
[ext_resource type="Script" path="res://player/player.gd" id="1_yd7bv"]
[ext_resource type="Script" path="res://player/fsm/FSM.gd" id="3_udrmt"]
[ext_resource type="Script" path="res://player/fsm/idle.gd" id="4_a3jc2"]
[ext_resource type="Script" path="res://player/fsm/run.gd" id="5_vs1mx"]
[ext_resource type="Script" path="res://player/fsm/air.gd" id="6_1cudt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1vani"]
radius = 54.0
height = 126.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_yd7bv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_47hed")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1vani")

[node name="Debug_data" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="Debug_data"]
layout_mode = 0
offset_left = -72.0
offset_top = -356.0
offset_right = -5.0
offset_bottom = -212.0

[node name="L_dir" type="Label" parent="Debug_data/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "dir"

[node name="L_vel" type="Label" parent="Debug_data/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "vel"

[node name="L_state" type="Label" parent="Debug_data/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "state"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)

[node name="FSM" type="Node" parent="."]
script = ExtResource("3_udrmt")
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("4_a3jc2")

[node name="Run" type="Node" parent="FSM"]
script = ExtResource("5_vs1mx")

[node name="Air" type="Node" parent="FSM"]
script = ExtResource("6_1cudt")
